--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "postinstall": "npm install --legacy-peer-deps",
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm install $NPM_FLAGS && next build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
